Renombra carpeta _ a assets y actualiza rutas

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>NF WEB</title>
 
     <!--favicon-->
-    <link rel="icon" type="image/png" href="_/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="_/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="_/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="_/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="_/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/favicon/site.webmanifest" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Zen+Dots&display=swap" rel="stylesheet">
 
     <!--styles-->
-    <link rel="stylesheet" href="_/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
 
@@ -58,7 +58,7 @@
                     <div class="producto-inner">
                         <div class="producto-front">
                             <h3>Identidad Visual</h3>
-                            <img src="_/img/identidad-visual.jpg" alt="Producto 1">
+                            <img src="assets/img/identidad-visual.jpg" alt="Producto 1">
                         </div>
                         <div class="producto-back">
                             <p>Diseñamos tu universo visual: logotipos, paletas de color, tipografías y todo lo necesario para que tu marca sea inolvidable y coherente.</p>
@@ -70,7 +70,7 @@
                     <div class="producto-inner">
                         <div class="producto-front">
                             <h3>Ads AI <br> Campañas</h3>
-                            <img src="_/img/ads.jpg" alt="Producto 2">
+                            <img src="assets/img/ads.jpg" alt="Producto 2">
                         </div>
                         <div class="producto-back">
                             <p>Lanzamos campañas publicitarias inteligentes en redes y buscadores, optimizadas por inteligencia artificial para lograr el mayor impacto.</p>
@@ -82,7 +82,7 @@
                     <div class="producto-inner">
                         <div class="producto-front">
                             <h3>Sitios Web <br> Interactivos</h3>
-                            <img src="_/img/interactivo.jpg" alt="Producto 3">
+                            <img src="assets/img/interactivo.jpg" alt="Producto 3">
                         </div>
                         <div class="producto-back">
                             <p>Desarrollamos páginas web rápidas, futuristas y responsive con una experiencia de usuario envolvente. Hechas para destacar en el 2050.</p>
@@ -98,32 +98,32 @@
             <ul class="caracteristicas-lista">
                 <!-- lista de características -->
                 <li class="caracteristica">
-                    <img src="_/img/velocidad.jpg" alt="Rapidez">
+                    <img src="assets/img/velocidad.jpg" alt="Rapidez">
                     <h3>Velocidad Cuántica</h3>
                     <p>Nuestros servidores y servicios cargan tan rápido como piensas. Optimización total desde el primer clic.</p>
                 </li>
                 <li class="caracteristica">
-                    <img src="_/img/interfaz.jpg" alt="Diseño">
+                    <img src="assets/img/interfaz.jpg" alt="Diseño">
                     <h3>Diseño Futurista</h3>
                     <p>Interfaces que parecen salidas de una película de ciencia ficción. Minimalismo, neón y funcionalidad en un mismo lugar.</p>
                 </li>
                 <li class="caracteristica">
-                    <img src="_/img/ia.jpg" alt="IA">
+                    <img src="assets/img/ia.jpg" alt="IA">
                     <h3>IA Creativa</h3>
                     <p>Asistentes virtuales que generan contenido visual y textual 24/7 para tu marca. Eficiencia en piloto automático.</p>
                 </li>
                 <li class="caracteristica">
-                    <img src="_/img/seo.jpg" alt="SEO">
+                    <img src="assets/img/seo.jpg" alt="SEO">
                     <h3>SEO Galáctico</h3>
                     <p>Posicionamos tu web en la cima de Google y otros motores gracias a nuestro algoritmo de análisis predictivo.</p>
                 </li>
                 <li class="caracteristica">
-                    <img src="_/img/panel.jpg" alt="Análisis">
+                    <img src="assets/img/panel.jpg" alt="Análisis">
                     <h3>Panel Holográfico</h3>
                     <p>Visualiza métricas en tiempo real con dashboards intuitivos y futuristas. Toma decisiones como un comandante espacial.</p>
                 </li>
                 <li class="caracteristica">
-                    <img src="_/img/soporte.jpg" alt="Soporte">
+                    <img src="assets/img/soporte.jpg" alt="Soporte">
                     <h3>Soporte 24/7 Interestelar</h3>
                     <p>Estamos contigo desde cualquier punto del universo. Nuestro equipo responde rápido y con soluciones concretas.</p>
                 </li>
@@ -133,7 +133,7 @@
         <!-- video -->
         <div class="video">
             <video autoplay muted loop playsinline>
-                <source src="_/video/video1.mp4" type="video/mp4">
+                <source src="assets/video/video1.mp4" type="video/mp4">
                 Tu navegador no soporta video HTML5.
             </video>
         </div>
@@ -174,19 +174,19 @@
                 <div class="testimonio">
                     <h3>Laura Sánchez</h3>
                     <p>“Gracias a NF, nuestra marca pasó de invisible a viral. Nos encanta el estilo visual y el servicio personalizado.”</p>
-                    <img src="_/img/laura.jpg" alt="Testimonio 1">
+                    <img src="assets/img/laura.jpg" alt="Testimonio 1">
                 </div>
 
                 <div class="testimonio">
                     <h3>Marco Díaz</h3>
                     <p>“El equipo entendió exactamente lo que queríamos. Ahora tenemos una web futurista que enamora a nuestros clientes.”</p>
-                    <img src="_/img/marco.jpg" alt="Testimonio 2">
+                    <img src="assets/img/marco.jpg" alt="Testimonio 2">
                 </div>
 
                 <div class="testimonio">
                     <h3>Lucía Romero</h3>
                     <p>“Invertimos en el plan premium y fue la mejor decisión. Campañas automáticas, branding perfecto y un dashboard que parece de otro planeta.”</p>
-                    <img src="_/img/lucia.jpg" alt="Testimonio 3">
+                    <img src="assets/img/lucia.jpg" alt="Testimonio 3">
                 </div>
             </div>
         </section>
@@ -225,6 +225,6 @@
         <p>&copy; 2025 NF. Todos los derechos reservados.<br> <span class="texto-rosa">Navegando hacia el futuro digital contigo.</span></p>
     </footer>
 
-  <script src="_/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
