--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-11533857084');
+  gtag('config', 'G-T6V73VW10J');
 </script>
 <head>
     <meta charset="UTF-8">
